@@ -807,6 +807,8 @@ framework.on('load', function() {
 	assert.ok(MODULE('supermodule').ok, 'load module from subdirectory');
 	assert.ok(F.config['custom-config1'] === '1YES', 'custom configuration 1');
 	assert.ok(F.config['custom-config2'] === '2YES', 'custom configuration 2');
+	assert.ok(RESOURCE('default', 'name-root').length > 0, 'custom resource mapping 1');
+	assert.ok(RESOURCE('default', 'name-theme').length > 0, 'custom resource mapping 2');
 
 	setTimeout(function() {
 		console.time('TEST');
