@@ -1,3 +1,4 @@
 exports.install = function() {
 	F.global.theme = 1;
+	F.register('=green/resources/default.resource');
 };
